1. Улучшения Collection API [#297783]